corpus/c/syntax/case-12/snapshots/gcc13_14/native_text_capture/render.ci.txt
note: some compiler details were not fully structured; original diagnostics are preserved
src/main.c:2:10: error: [syntax] expected ‘)’ before ‘{’ token
src/main.c: In function ‘broken_if’:
    2 |     if (1 {
      |        ~ ^~
      |          )
want: )
near: { token
| src/main.c:2:10
|     if (1 {
|          ^

src/main.c:6:1: error: [syntax] expected expression before ‘}’ token
    6 | }
      | ^
want: expression
near: } token
| src/main.c:6:1
| }
| ^

src/main.c:10:16: error: [compiler.residual] invalid operands to binary + (have ‘int *’ and ‘char *’)
src/main.c: In function ‘broken_type’:
   10 |     return ptr + "x";
      |                ^
      |                |
      |                char *
note: wrapper confidence is low; verify against the preserved raw diagnostics
raw : src/main.c:10:16: error: invalid operands to binary + (have ‘int *’ and ‘char *’)
| src/main.c:10:16
|     return ptr + "x";
|                ^